--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -1,35 +1,78 @@
-$defult_color: #fdebbe;
+@import "variables.scss";
 
 div {
-  font-family: "Comic Sans MS";
+  font-family: $font-family;
   .header {
-    height: 5em;
-    background-color: $defult_color;
+    height: auto;
+    width: 100vw;
+    background-color: $color-doge;
     position: sticky;
     top: 0px;
+    border-style: none none solid none;
+    border-width: 0.1rem;
   }
 
   .flexContainerLogo {
     display: flex;
     justify-content: space-between;
-    margin: 0rem 50rem 0rem 17rem;
+    margin: 0rem 40vw 0rem 17vw;
+
+    @media only screen and(max-width:$screen-xl) {
+      margin: 0 35vw 0 2vw;
+    }
+    @media only screen and(max-width:$screen-lg) {
+      margin: 0rem 2rem 0rem 1rem;
+    }
+    @media only screen and(max-width:$screen-md) {
+      margin: 0rem 2rem 0rem 1rem;
+    }
+    @media only screen and(max-width:$screen-sm) {
+      flex-wrap: wrap;
+      margin-top: 3vw;
+    }
+
     .dogeLogo {
       height: 4em;
       width: 4em;
       margin-top: 0.5em;
+      @media only screen and(max-width:$screen-sm) {
+        height: 10vw;
+        width: 10vw;
+        margin-top: 2vw;
+      }
     }
     .flexContainerCoinValue {
       display: flex;
       text-align: center;
       margin-top: 0.5em;
+      @media only screen and(max-width:$screen-sm) {
+        margin-top: 4vw;
+        font-size: 10px;
+      }
       .coinValue {
         margin-top: 0.3em;
         margin-left: 0.5em;
+        vertical-align: baseline;
+        @media only screen and(max-width:$screen-sm) {
+          margin-top: 0%;
+          margin-bottom: 3vw;
+        }
+      }
+      .coinValueDisc {
+        margin-left: 0.5em;
+        @media only screen and(max-width:$screen-sm) {
+          margin-bottom: 3vw;
+          margin-top: 2vw;
+        }
       }
       .change {
         margin-left: 0.3em;
         margin-top: 0.3em;
         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+        @media only screen and(max-width:$screen-sm) {
+          margin-top: 0%;
+          margin-bottom: 3vw;
+        }
       }
     }
   }
