--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
-}
+@import "variables";
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.contentsMain {
+  font-family: $font-family;
+  background-color: $color-doge;
+  padding-top: 3vw;
+  padding-bottom: 3vw;
+  @media only screen and(max-width:$screen-md) {
+    text-align: center;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  .flexcontainer {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 50vw 0 10vw;
+    @media only screen and(max-width:$screen-md) {
+      display: block;
+    }
+    .contentimg {
+      max-width: 500px;
+      max-height: 500px;
+    }
   }
 }
