--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -1,10 +1,10 @@
-@import "variables.scss";
+@import "_variables.scss";
 
 div {
   font-family: $font-family;
   .header {
     height: auto;
-    width: 100vw;
+    width: auto;
     background-color: $color-doge;
     position: static;
     top: 0px;
